Vision/Source/Atmcd32d.h

EXPNETTYPE unsigned int WINAPI CancelWait();
EXPNETTYPE unsigned int WINAPI GetBitDepth(int channel, int* depth);
EXPNETTYPE unsigned int WINAPI GetCameraInformation(int index, long *information);
EXPNETTYPE unsigned int WINAPI GetFastestRecommendedVSSpeed(int *index, float* speed);
EXPNETTYPE unsigned int WINAPI GetHVflag(int *bFlag);
EXPNETTYPE unsigned int WINAPI GetImages (long first, long last, long* array, unsigned long size, long* validfirst, long* validlast);
EXPNETTYPE unsigned int WINAPI GetImages16 (long first, long last, WORD* array, unsigned long size, long* validfirst, long* validlast);
EXPNETTYPE unsigned int WINAPI GetMCPGain(int iNum, int *iGain, float *fPhotoepc);
EXPNETTYPE unsigned int WINAPI GetMCPVoltage(int *iVoltage);
EXPNETTYPE unsigned int WINAPI GetMostRecentColorImage16 (unsigned long size, int algorithm, WORD* red, WORD* green, WORD* blue);
EXPNETTYPE unsigned int WINAPI GetMostRecentImage (long* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetMostRecentImage16 (WORD* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetNumberNewImages (long* first, long* last);
EXPNETTYPE unsigned int WINAPI GetNumberVSAmplitudes(int* number);
EXPNETTYPE unsigned int WINAPI GetOldestImage (long* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetOldestImage16 (WORD* array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetSlotBusDeviceFunction(DWORD *dwSlot, DWORD *dwBus, DWORD *dwDevice, DWORD *dwFunction);
EXPNETTYPE unsigned int WINAPI InitializeDevice(char * dir);
EXPNETTYPE unsigned int WINAPI IsInternalMechanicalShutter(int *InternalShutter);
EXPNETTYPE unsigned int WINAPI IsPreAmpGainAvailable(int channel, int amplifier, int index, int pa, int* status);
EXPNETTYPE unsigned int WINAPI SaveEEPROMToFile(char *cFileName);
EXPNETTYPE unsigned int WINAPI SetCoolerMode(int mode);
EXPNETTYPE unsigned int WINAPI SetDMAParameters(int MaxImagesPerDMA, float SecondsPerDMA);
EXPNETTYPE unsigned int WINAPI SetFrameTransferMode(int mode);
EXPNETTYPE unsigned int WINAPI WaitForAcquisition();
EXPNETTYPE unsigned int WINAPI WaitForAcquisitionByHandle(long cameraHandle);
EXPNETTYPE unsigned int WINAPI GetControllerCardModel(char* controllerCardModel);