Vision/Source/ATMCD32D.pas

    function GetMostRecentImage(arr: PInteger; size: Integer): integer; stdcall;
    function GetOldestImage(arr: PInteger; size: Integer): integer; stdcall;
    function GetNumberNewImages(var first: Integer; var last: Integer): integer; stdcall;
    function GetImages(first: Integer; last: Integer; arr: PInteger; size: Integer; var validfirst: Integer; var validlast: Integer): integer; stdcall;
    function GetMostRecentImage16(arr: PWord; size: Integer): integer; stdcall;
    function GetOldestImage16(arr: PWord; size: Integer): integer; stdcall;
    function GetImages16(first: Integer; last: Integer; arr: PWord; size: Integer; var validfirst: Integer; var validlast: Integer): integer; stdcall;
    function SetFrameTransferMode(mode: Integer ): integer; stdcall;
    function GetNumberVSAmplitudes(var number: Integer): integer; stdcall;
    function GetBitDepth(channel: Integer ; var depth: Integer): integer; stdcall;
    function GetCameraInformation(index: Integer ; var information: Integer): integer; stdcall;
    function SetCoolerMode(mode: Integer ): integer; stdcall;
    function IsPreAmpGainAvailable(channel: Integer; amp: Integer; index: Integer; pa: Integer; var state: Integer): integer; stdcall;
    function GetFastestRecommendedVSSpeed(var index: Integer; var speed: Single): integer; stdcall;
    function GetSlotBusDeviceFunction(var Slot:Integer; var Bus:Integer; var Device:Integer; var DevFunction:Integer): integer; stdcall;
    function InitializeDevice(dir: PChar ): integer; stdcall;
    function SetDMAParameters(MaxImagesPerDMA: Integer; SecondsPerDMA: Single): integer; stdcall;
    function IsInternalMechanicalShutter(var InternalShutter: Integer): integer; stdcall;
    function SaveEEPROMToFile(cFileName: PChar): integer; stdcall;
    function GetHVflag(var flag: Integer): integer; stdcall;
    function GetMCPGain(number: Integer; gain: PInteger; photoepc: PSingle): integer; stdcall;
    function GetMCPVoltage(var voltage: Integer): integer; stdcall;
    function WaitForAcquisition: integer; stdcall;
    function WaitForAcquisitionByHandle(cameraHandle: Integer): integer; stdcall;
    function CancelWait: integer; stdcall;
    function GetMostRecentColorImage16(size: Integer; algorithm: Integer; red: PWord; green: PWord; blue: PWord):integer;stdcall;
    function GetControllerCardModel(controllerCardModel: PChar):integer;stdcall;

implementation
